# django-homework

./: data.json  permissions.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_record_creation_date_alter_record_slug_and_more.py  0003_remove_record_attribute_record_dislikes_count_and_more.py  0004_alter_record_dislikes_count_alter_record_likes_count.py  0005_alter_record_publicated.py  0006_tag.py
blog/templates/blog/: base.html  record_confirm_delete.html  record_detail.html  record_form.html  record_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: refill_cat.py  refill_prod.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category_alter_product_created_date_and_more.py  0003_alter_product_created_date.py  0004_alter_product_last_fix_date.py  0005_version.py  0006_alter_version_v_name.py  0007_alter_version_options_version_add_date.py  0008_product_user.py  0009_product_publicated.py  0010_alter_product_publicated.py
catalog/templates/catalog/: base.html  contacts.html  index.html  need.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  thanks.html
catalog/templatetags/: custom_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_country.py  0003_user_verify_key.py
users/templates/users/: login.html  register.html  user_form.html  verify.html
(+2 files in other folders)
